--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
 
-  <p id="label">오늘의 운세</p>
+  <p id="label">전국 직장인 멘탈관리소</p>
   <p id="sentence" class="loading">점 보는 중...</p>
   <button id="share" onclick="share()">공유하기</button>
 
